--- a/bible.ipynb
+++ b/bible.ipynb
@@ -106,14 +106,52 @@
         "text = pdf_to_text(\"psalms.pdf\")\n",
         "\n",
         "\n",
-        "out=summarize(text,word_count=200)\n",
-        "out.replace(\"thee\",\"you\")\n",
-        "out.replace(\"thou\",\"you\")\n",
-        "out.replace(\"art\",\"are\")\n",
-        "print(out)"
+        "out=summarize(text,word_count=200)\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E6njlBJ38aYJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 247
+        },
+        "outputId": "e3fce00b-b054-4e18-a874-5bb6c7b28d7e"
+      },
+      "source": [
+        "\n",
+        "out=out.replace(\"thee\",\"you\")\n",
+        "out=out.replace(\"thou\",\"you\")\n",
+        "out=out.replace(\"art\",\"are\")\n",
+        "out=out.replace(\"thy\",\"your\")\n",
+        "print(out)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4 For you are not a God that loveth wickedness: neither shall evil dwell with you.\n",
+            "10 And they that know your Name, will trust in you: for you, Lord, hast not failed \n",
+            "49 Therefore I will praise you, O Lord, among the nations, and will sing unto your \n",
+            "8 When you saidest, Seek ye my face, mine heare answered unto you, O Lord, I \n",
+            "2 O Lord my God, I cried unto you, and you hast restored me.\n",
+            "12 Therefore shall my tongue praise you and not cease: O Lord my God, I will \n",
+            "5 Into thine hand I commend my spirit: for you hast redeemed me, O Lord God \n",
+            "14 But I trusted in you, O Lord: I said, Thou are my God.\n",
+            "5 Commit your way unto the Lord, and trust in him, and he shall bring it to pass.\n",
+            "5 O Lord my God, you hast made your wonderful works so many, that none can \n",
+            "15 Open you my lips, O Lord, and my mouth shall shew forth your praise.\n",
+            "men: yea, even the rebellious hast you led, that the Lord God might dwell there.\n",
+            "23 My lips will rejoice when I sing unto you, and my soul, which you hast \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
